<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.learning.tango</groupId>
	<artifactId>tango-restendpoint</artifactId>
	<version>5.0.0</version>
	<name>Simple rest endpoint helloworld</name>
	<properties>
		<java.version>21</java.version>
	</properties>
	<scm>
		<connection>scm:git:https://github.com/mittalrohit7/restendpoint.git</connection>
		<developerConnection>
			scm:git:https://github.com/mittalrohit7/restendpoint.git</developerConnection>
		<url>https://github.com/mittalrohit7/restendpoint.git</url>
		<tag>tango-restendpoint-5.0.0</tag>
	</scm>
	<distributionManagement>
		<repository>
			<id>local-repo</id>
			<url>file://${project.basedir}/local-repo</url>
		</repository>
	</distributionManagement>
	<dependencies>
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jaxrs</artifactId>
			<version>3.15.6.Final</version>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>8.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.3.2</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>war</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- WildFly Maven Plugin for server deployment and management -->
			<plugin>
				<groupId>org.wildfly.plugins</groupId>
				<artifactId>wildfly-jar-maven-plugin</artifactId>
				<version>11.0.2.Final</version>
				<configuration>
					<feature-packs>
						<feature-pack>
							<location>
								wildfly@maven(org.jboss.universe:community-universe)#34.0.0.Final</location>
						</feature-pack>
					</feature-packs>
					<layers>
						<layer>cloud-profile</layer>
						<layer>logging</layer>
						<layer>ejb-lite</layer>
						<layer>webservices</layer>
					</layers>
					<excluded-layers>
						<layer>deployment-scanner</layer>
					</excluded-layers>
					<!--	<cli-sessions>
						<cli-session>
							<script-files>
								<script>${basedir}/scripts/add-user.cli</script>
							</script-files>
							<resolve-expressions>false</resolve-expressions>
						</cli-session>
					</cli-sessions>-->
					<cloud>
						<type>kubernetes</type>
					</cloud>
					<output-file-name>${project.artifactId}.jar</output-file-name>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>package</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>jib</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.google.cloud.tools</groupId>
						<artifactId>jib-maven-plugin</artifactId>
						<version>3.3.0</version>
						<configuration>
							<containerizingMode>packaged</containerizingMode>
							<from>
								<image>eclipse-temurin:21-jre</image>
							</from>
							<to>
								<image>docker.io/mittalrohit7/learning</image> <!--
						Change this to your Docker registry -->
								<auth>
									<username>mittalrohit7@gmail.com</username>
									<password>Kandy@1960</password>
								</auth>
								<tags>
									<tag>${project.version}</tag>
									<tag>latest</tag>
								</tags>
							</to>
							<container>
								<jvmFlags>
									<jvmFlag>
										--add-opens=java.base/java.util=ALL-UNNAMED</jvmFlag>
									<jvmFlag>
										--add-opens=java.base/sun.security.util=ALL-UNNAMED</jvmFlag>
									<jvmFlag>
										--add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED</jvmFlag>
									<jvmFlag>
										--add-exports=java.base/java.lang=ALL-UNNAMED</jvmFlag>
								</jvmFlags>
								<mainClass>org.wildfly.core.jar.boot.Main</mainClass>
								<args>
									<arg>-b=0.0.0.0</arg>
								</args>
								<ports>
									<port>8080</port>
								</ports>
							</container>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>build</goal> <!-- Specify the goal here -->
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>